﻿[B]Changelog[/B]
Fixed: NPO changed their URL scheme which broke parsing (Fixed #654)

[I]Previous Changes[/I]
Fixed: Some NPO listings were empty due to site changes (Fixes #647)
Fixed: Very old streams would not play (Fixes #648)
Added: more NPO Radio web cam streams (Fixes #643)
Added: Genres to NPO.nl channel (Fixes #388)
Fixed: NPO updated their video back-end which broke playback (Fixes #634)
Fixed: NPO date items did not work (Fixed #623)
Fixed: NPO.nl changed their site which broke the alphabetical listing (Fixes #612)
Fixed: NPO broke due to site changes (Fixes #605)
Fixed: 3FM web cam stream disappeared from the listing due to a previous fix (Fixes #594)
Added: "Current" and "Next" to the NPO Live channels (Fixes #583) and don't cache the Live TV Url for now